--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <section>
       <h2>Support</h2>
-      <p>If you encounter any issues or have any questions about Notepad Go, please contact our support team at support@notepadgo.com</p>
+      <p>If you encounter any issues or have any questions about Notepad Go, please contact our support team at notepadforchrome@proton.me</p>
     </section>
   </main>
 
