--- a/index.html
+++ b/index.html
@@ -84,55 +84,22 @@
       border-radius: 5px;
       cursor: pointer;
       transition: background-color 0.3s ease;
-      text-decoration: none; /* Added */
+      text-decoration: none;
     }
 
     .add-button:hover {
       background-color: #45a049;
     }
   </style>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <header>
+    <img src="logo128.png" alt="Notepad Go Logo">
     <h1>Notepad Go</h1>
     <p>A Simple and Lightweight Chrome Extension for Taking Notes</p>
   </header>
 
-  <main>
-    <section>
-      <h2>Features</h2>
-      <ul>
-        <li>Easy note-taking directly from your browser</li>
-        <li>Sync notes across devices using your Google account</li>
-        <li>Simple and intuitive user interface</li>
-        <li>Customizable text formatting options</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Installation</h2>
-      <ol>
-        <li>Open the Chrome Web Store</li>
-        <li>Search for "Notepad Go" in the search bar</li>
-        <li>Click on the extension and then click "Add to Chrome"</li>
-        <li>Once installed, the Notepad Go icon will appear in the toolbar</li>
-      </ol>
-      <a href="https://chrome.google.com/webstore/detail/notepadgo-chrome/flcggkfcemmejceipbedokfkkacdfkca" class="add-button">Add to Chrome</a>
-    </section>
-
-    <section>
-      <h2>Usage</h2>
-      <p>To use Notepad Go, simply click on the extension icon in the toolbar. A new tab will open with the notepad interface where you can start taking notes immediately.</p>
-    </section>
-
-    <section>
-      <h2>Support</h2>
-      <p>If you encounter any issues or have any questions about Notepad Go, please contact our support team at notepadforchrome@proton.me</p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2023 Notepad Go. All rights reserved.</p>
-  </footer>
+  <!-- Rest of the HTML code -->
 </body>
 </html>
