--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
     }
   </style>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="icon128.png" type="image/png" sizes="128x128">
 </head>
 <body>
   <header>
-    <img src="logo128.png" alt="Notepad Go Logo">
+    <img src="icon128.png" alt="Notepad Go Logo">
     <h1>Notepad Go</h1>
     <p>A Simple and Lightweight Chrome Extension for Taking Notes</p>
   </header>
